# ai-that-works

./: README.md  data.json  events.json  feed.xml
.claude/: settings.local.json
2025-03-31-large-scale-classification/: README.md  README_zh.md  meta.md  meta_zh.md
2025-04-07-reasoning-models-vs-prompts/: README.md  README_zh.md  meta.md  meta_zh.md
2025-04-15-code-generation-small-models/: README.md  README_zh.md  meta.md
2025-04-22-twelve-factor-agents/: README.md  README_zh.md  meta.md  meta_zh.md
2025-05-10-workshop-nyc-twelve-factor-agents/: README.md  README_zh.md  meta.md  meta_zh.md
2025-05-13-designing-evals/: README.md  meta.md
2025-05-17-workshop-sf-twelve-factor-agents/: README.md  meta.md
2025-05-20-policies-to-prompts/: README.md  meta.md
2025-05-27-mcp-with-10000-tools/: README.md  meta.md
2025-06-03-humans-as-tools-async/: README.md  meta.md
2025-06-10-cracking-the-prompting-interview/: README.md  meta.md
2025-06-17-entity-extraction/: README.md  meta.md
2025-06-24-ai-content-pipeline/: README.md  meta.md
2025-07-01-ai-content-pipeline-2/: README.md  meta.md
2025-07-08-context-engineering/: README.md  meta.md
2025-07-15-decaying-resolution-memory/: README.md  meta.md
2025-07-22-multimodality/: README.md  meta.md
2025-08-19-interruptible-agents/: README.md  (+1 more)
2025-09-02-voice-agent-supervisor-threading/: .env.example  CLAUDE.md  README.md  deep-research.md  meta.md  pyproject.toml  specification_updates.md  voice_agent.py
2025-09-02-voice-agent-supervisor-threading/baml_src/: clients.baml  functions.baml  generators.baml
(+59 files in other folders)
